# revproxauth

./: .dockerignore  .gitignore  BUILD.md  Dockerfile  Makefile  README.md  docker-compose.caddy.yml  docker-compose.dev.yml  docker-compose.final.yml  docker-compose.nginx.yml  docker-compose.revproxauth.yml  docker-compose.synauthproxy.yml  docker-compose.traefik.yml  docker-compose.yml  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: docker-publish.yml  lint.yml  publish-substack.yml
apps/: README.md
apps/caddy/: Caddyfile  Dockerfile
apps/caddy/auth-backend/: Dockerfile  auth.py  requirements.txt
apps/go-radius-auth/: MESSAGE-AUTHENTICATOR.md  README.md  go.mod
apps/nginx/: Dockerfile  README.md  nginx.conf
apps/radius/: README.md
apps/radius-auth/: auth.py
apps/radius-auth-go/: Dockerfile  README.md  go.mod  main.go
apps/radius-auth-py/: Dockerfile  auth.py  pyproject.toml
apps/revproxauth/: Dockerfile  README.md  base.html  dictionary  main.py  mappings.html  pyproject.toml
apps/synauthproxy/: Dockerfile  README.md  login.html  main.py  mappings.html
apps/traefik/: README.md  traefik.yml
config/: mappings.json  synauthproxy.json
doc/: README.md
docs/: README-build.md  README.md  _template.html  setup-guide.html  setup-guide.md
docs/mermaid/: README.md  problem-diagram.mmd  solution-diagram.mmd
docs/substack/: README.md  post.md
pyrad-stubs/: __init__.pyi  client.pyi  dictionary.pyi
templates/: base.html  login.html  mappings.html  metrics.html
tools/: README.md  build_guide.py  convert_to_substack.py  copy_html_for_substack.py  generate_logo_composite.py  generate_mermaid_diagrams.py  publish_to_substack.py
(+25 files in other folders)
